--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ edition = "2021"
 tokio = { version = "^1.17.0", features = ["full"] }
 clap = { version = "^3.2.17", features = ["derive", "env"] }
 serde = { version = "^1.0.136", features = ["derive"] }
+xml_serde = "^1.4.0"
 log = "^0.4.14"
 flexi_logger = { version = "^0.22.3", features = ["colors", "use_chrono_for_offset"] }
 actix-web = "^4.1.0"
 actix-files = "^0.6.2"
 mar = { path = "../mar" }
+hmac-sha512 = "^1.1.2"
+hex = "^0.4.3"
