--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ log = "^0.4.14"
 flexi_logger = { version = "^0.22.3", features = ["colors", "use_chrono_for_offset"] }
 actix-web = "^4.1.0"
 actix-files = "^0.6.2"
-mar = { path = "../mar" }
+mar = "^0.2.0"
 hmac-sha512 = "^1.1.2"
 hex = "^0.4.3"
+rust-ini = "^0.18.0"
